changed name in gh pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blog",
+  "name": "rpsls",
   "version": "0.1.0",
   "private": true,
   "homepage": "http://ainika-kos.github.io/rpsls",
